apps/hello-world/envs/qa/replicas.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-app
spec:
  replicas: 4
  revisionHistoryLimit: 2
