apps/hello-world/envs/qa/patch-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-active
spec:
  to:
    name: qa-hello-world-active
